tests/snapshot/error/source_locations/destructure/object/get_property.js
var obj = {
  get foo() {
    throw new Error();
  }
};

var { ['fo' + 'o']: x } = obj;